--- a/Edubile_app/pubspec.yaml
+++ b/Edubile_app/pubspec.yaml
@@ -1,4 +1,4 @@
-name: sidebar_animation
+name: eduthon
 description: A flutter project for sidebar animation and page links
 
 # The following defines the version and build number for your application.
@@ -18,12 +18,15 @@ environment:
 
 dependencies:
   flutter:
+
     sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   flutter_bloc: ^2.1.1
+  carousel_pro: ^1.0.0
+  flutter_svg:
 
 dev_dependencies:
   flutter_test:
@@ -42,9 +45,36 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+    - assets/file/LEFT1.png
+    - assets/file/LEFT2.png
+    - assets/file/MID.png
+    - assets/file/RIGHT1.png
+    - assets/file/RIGHT2.png
+    - assets/student.png
+    - assets/file/theme.jpg
+    - assets/Semester/1.png
+    - assets/Semester/2.png
+    - assets/Semester/3.png
+    - assets/Semester/4.png
+    - assets/Semester/5.png
+    - assets/Semester/6.png
+    - assets/Semester/7.png
+    - assets/Semester/8.png
+    - assets/logo.png
+    - assets/sem.png
+    - assets/Categories/apti.png
+    - assets/Categories/compnet.png
+    - assets/Categories/corec.png
+    - assets/Categories/database.png
+    - assets/Categories/ele.png
+    - assets/Categories/embsys.png
+    - assets/Categories/maths.png
+    - assets/Categories/mech.png
+    - assets/Categories/pl.png
+    - assets/Categories/WD.png
+    - assets/images/
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
