--- a/Edubile_app/pubspec.yaml
+++ b/Edubile_app/pubspec.yaml
@@ -27,6 +27,10 @@ dependencies:
   flutter_bloc: ^2.1.1
   carousel_pro: ^1.0.0
   flutter_svg:
+  video_player: "^0.10.1"
+  chewie:
+  auto_orientation:
+  flutter_plugin_pdf_viewer:
 
 dev_dependencies:
   flutter_test:
@@ -73,8 +77,10 @@ flutter:
     - assets/Categories/mech.png
     - assets/Categories/pl.png
     - assets/Categories/WD.png
+    - assets/bg1.png
     - assets/images/
     - assets/icons/
+    - assets/video.mp4
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
