--- a/Edubile_app/pubspec.yaml
+++ b/Edubile_app/pubspec.yaml
@@ -24,13 +24,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  flutter_bloc: ^2.1.1
+  flutter_bloc:
   carousel_pro: ^1.0.0
   flutter_svg:
   video_player: "^0.10.1"
   chewie:
   auto_orientation:
-  flutter_plugin_pdf_viewer:
+
 
 dev_dependencies:
   flutter_test:
@@ -81,6 +81,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/video.mp4
+    - assets/pdf.pdf
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
